--- a/customcss.css
+++ b/customcss.css
@@ -1,15 +1,41 @@
 @charset "utf-8";
 .p0{
-	padding: 0px;
+	padding-right: 0px;
 }
 .m0{
 	margin-left:-15px;
+}
+/* -------------------------------------------------------------------- */
+
+.gributon
+{
+
+    border-color: gray;
+    background-color: gray;
+    margin-top: 5px;
+}
+
+/* --------------------------- ICERİK RESİMLER ---------------------- */
+.sliderbonceki
+{
+    position: absolute;
+    margin-top: -165px;
+    z-index: 1;
+}
+.sliderbsonraki
+{
+	float: right;
+	margin-right: 74px;
 }
 .w100{
 	width: 100%;
 	text-align: center;
 	max-height: 300px;
+	min-height: 300px;
 }
+
+/* -------------------------------------------------------------------- */
+
 .wmenu{
 	text-align: center;
 	padding: 5px;
@@ -21,4 +47,12 @@
 .elaman img
 {
     min-height:300px !important;
+}
+
+/* ---------------------------- FOOTER ------------------------------ */
+
+.footer
+{
+	background: pink;
+    margin-top: 100px;
 }
